@@ -61,6 +61,7 @@ public class EqualToExpr extends BinaryComparisonOperator {
 
     @Override
     public Result getNext(Boolean bool) throws ExecException {
+      try {
         Result left, right;
 
         switch (operandType) {
@@ -92,6 +93,9 @@ public class EqualToExpr extends BinaryComparisonOperator {
         }
 
         }
+      } catch (RuntimeException e) {
+          throw new ExecException("exception while executing " + this.toString() + ": " + e.toString(), 2067, PigException.BUG, e);
+      }
     }
 
     @SuppressWarnings("unchecked")
