@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-3004: Improve exceptions messages when a RuntimeException is raised in Physical Operators (julien)
+
 PIG-2990: the -secretDebugCmd shouldn't be a secret and should just be...a command (jcoveney)
 
 PIG-2941: Ivy resolvers in pig don't have consistent chaining and don't have a kitchen sink option for novices (jgordon via azaroth)
